// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Heading Converter oboToSlate converts an OboNode to a Slate node with content 1`] = `
Object {
  "children": Array [
    Object {
      "text": "mockText",
    },
    Object {
      "text": "mockText",
    },
  ],
  "content": Object {
    "align": "left",
    "textGroup": Array [
      Object {
        "text": Object {
          "value": "mockText",
        },
      },
      Object {
        "data": Object {
          "align": "left",
        },
        "text": Object {
          "value": "mockText",
        },
      },
    ],
    "triggers": "mock-triggers",
  },
  "id": "mockKey",
  "type": "mockType",
}
`;

exports[`Heading Converter slateToObo converts a Slate node to an OboNode with content 1`] = `
Object {
  "children": Array [],
  "content": Object {
    "textGroup": Array [
      Object {
        "data": Object {
          "align": undefined,
        },
        "text": Object {
          "styleList": Array [
            Object {
              "data": Object {},
              "end": 8,
              "start": 0,
              "type": "b",
            },
            Object {
              "data": Object {},
              "end": 8,
              "start": 0,
              "type": "b",
            },
          ],
          "value": "mockTextmockText",
        },
      },
    ],
  },
  "id": "mockKey",
  "type": "mockType",
}
`;
